syntax = "proto3";

package go_grpc_microservices.auth.v1;

import "google/api/field_behavior.proto";
import "protoc-gen-validate/validate/validate.proto";

option go_package = "github.com/MochamadAkbar/go-grpc-microservices/proto/auth/v1;authv1";

message HealthCheckRequest {}

message HealthCheckResponse {
  string message = 1;
}

message TokenData {
  string access_token = 1;
}

message RegisterRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  string email = 2 [(google.api.field_behavior) = REQUIRED, (validate.rules).string = { email: true }];
  string password = 3 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message RegisterResponse {
  uint32 code = 1;
  string status = 2;
  string message = 3;
  TokenData data = 4;
}

message LoginRequest {
  string email = 1 [(google.api.field_behavior) = REQUIRED, (validate.rules).string = { email: true }];
  string password = 2 [(google.api.field_behavior) = REQUIRED];
}

message LoginResponse {
  uint32 code = 1;
  string status = 2;
  string message = 3;
  TokenData data = 4;
}